# How-to-properly-FUCKING-make-a-basic-login-register-application

./: Cargo.toml  LICENSE  README.md
src/: db.rs  errors.rs  main.rs  models.rs
